Update build badge for xunit.analyzers

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@ title: Home
     </tr>
     <tr>
       <th>Build Status</th>
-      <td><a href="https://ci.appveyor.com/project/xunit/xunit"><img src="https://img.shields.io/appveyor/ci/xunit/xunit.svg?style=flat-square"></a></td>
-      <td><a href="https://ci.appveyor.com/project/xunit/xunit-analyzers"><img src="https://img.shields.io/appveyor/ci/xunit/xunit-analyzers.svg?style=flat-square"></a></td>
+      <td></td>
+      <td><a href="https://actions-badge.atrox.dev/xunit/xunit.analyzers/goto"><img src="https://img.shields.io/endpoint.svg?url=https%3A%2F%2Factions-badge.atrox.dev%2Fxunit%2Fxunit.analyzers%2Fbadge&style=flat-square&label=GitHub"></a></td>
       <td></td>
     </tr>
     <tr>
