--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@ title: Home
       <th>xunit.runner.devices</th>
       <td><a href="https://www.nuget.org/packages/xunit.runner.devices"><img src="https://img.shields.io/nuget/v/xunit.runner.devices.svg?style=flat-square"></a></td>
       <td></td>
-      <td><a href="https://dev.azure.com/dotnet/xUnit/_build?definitionId=23&_a=summary"><img src="https://img.shields.io/azure-devops/build/dotnet/xUnit/23"></a></td>
+      <td><a href="https://dev.azure.com/dotnet/xUnit/_build?definitionId=23&_a=summary"><img src="https://img.shields.io/azure-devops/build/dotnet/xUnit/23?style=flat-square"></a></td>
     </tr>
     <tr>
       <th>xunit.runner.visualstudio</th>
       <td><a href="https://www.nuget.org/packages/xunit.runner.visualstudio"><img src="https://img.shields.io/nuget/v/xunit.runner.visualstudio.svg?style=flat-square"></a></td>
       <td></td>
-      <td><a href="https://dev.azure.com/dotnet/xUnit/_build?definitionId=64&_a=summary"><img src="https://img.shields.io/azure-devops/build/dotnet/xUnit/64"></a></td>
+      <td><a href="https://dev.azure.com/dotnet/xUnit/_build?definitionId=64&_a=summary"><img src="https://img.shields.io/azure-devops/build/dotnet/xUnit/64?style=flat-square"></a></td>
     </tr>
   </tbody>
 </table>
