Add logos to shield icons

--- a/index.html
+++ b/index.html
@@ -53,27 +53,27 @@ title: Home
   <tbody>
     <tr>
       <th>Core framework</th>
-      <td><a href="https://www.nuget.org/packages/xunit"><img src="https://img.shields.io/nuget/v/xunit.svg?style=flat-square"></a></td>
-      <td><a href="https://myget.org/feed/xunit/package/nuget/xunit"><img src="https://img.shields.io/myget/xunit/vpre/xunit.svg?style=flat-square&label=myget"></a></td>
+      <td><a href="https://www.nuget.org/packages/xunit"><img src="https://img.shields.io/nuget/v/xunit.svg?style=flat-square&logo=nuget"></a></td>
+      <td><a href="https://myget.org/feed/xunit/package/nuget/xunit"><img src="https://img.shields.io/myget/xunit/vpre/xunit.svg?style=flat-square&label=myget&logo=nuget"></a></td>
       <td></td>
     <tr>
     <tr>
       <th>xunit.analyzers</th>
-      <td><a href="https://www.nuget.org/packages/xunit.analyzers"><img src="https://img.shields.io/nuget/v/xunit.analyzers.svg?style=flat-square"></a></td>
-      <td><a href="https://myget.org/feed/xunit/package/nuget/xunit.analyzers"><img src="https://img.shields.io/myget/xunit/vpre/xunit.analyzers.svg?style=flat-square&label=myget"></a></td>
+      <td><a href="https://www.nuget.org/packages/xunit.analyzers"><img src="https://img.shields.io/nuget/v/xunit.analyzers.svg?style=flat-square&logo=nuget"></a></td>
+      <td><a href="https://myget.org/feed/xunit/package/nuget/xunit.analyzers"><img src="https://img.shields.io/myget/xunit/vpre/xunit.analyzers.svg?style=flat-square&label=myget&logo=nuget"></a></td>
       <td><a href="https://actions-badge.atrox.dev/xunit/xunit.analyzers/goto"><img src="https://img.shields.io/endpoint.svg?url=https%3A%2F%2Factions-badge.atrox.dev%2Fxunit%2Fxunit.analyzers%2Fbadge&style=flat-square&label=build"></a></td>
     </tr>
     <tr>
       <th>xunit.runner.devices</th>
-      <td><a href="https://www.nuget.org/packages/xunit.runner.devices"><img src="https://img.shields.io/nuget/v/xunit.runner.devices.svg?style=flat-square"></a></td>
+      <td><a href="https://www.nuget.org/packages/xunit.runner.devices"><img src="https://img.shields.io/nuget/v/xunit.runner.devices.svg?style=flat-square&logo=nuget"></a></td>
       <td></td>
-      <td><a href="https://dev.azure.com/dotnet/xUnit/_build?definitionId=23&_a=summary"><img src="https://img.shields.io/azure-devops/build/dotnet/xUnit/23?style=flat-square"></a></td>
+      <td><a href="https://dev.azure.com/dotnet/xUnit/_build?definitionId=23&_a=summary"><img src="https://img.shields.io/azure-devops/build/dotnet/xUnit/23?style=flat-square&logo=azure-devops"></a></td>
     </tr>
     <tr>
       <th>xunit.runner.visualstudio</th>
-      <td><a href="https://www.nuget.org/packages/xunit.runner.visualstudio"><img src="https://img.shields.io/nuget/v/xunit.runner.visualstudio.svg?style=flat-square"></a></td>
+      <td><a href="https://www.nuget.org/packages/xunit.runner.visualstudio"><img src="https://img.shields.io/nuget/v/xunit.runner.visualstudio.svg?style=flat-square&logo=nuget"></a></td>
       <td></td>
-      <td><a href="https://dev.azure.com/dotnet/xUnit/_build?definitionId=64&_a=summary"><img src="https://img.shields.io/azure-devops/build/dotnet/xUnit/64?style=flat-square"></a></td>
+      <td><a href="https://dev.azure.com/dotnet/xUnit/_build?definitionId=64&_a=summary"><img src="https://img.shields.io/azure-devops/build/dotnet/xUnit/64?style=flat-square&logo=azure-devops"></a></td>
     </tr>
   </tbody>
 </table>
