--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@ title: Home
     <tr>
       <th>xunit.runner.devices</th>
       <td><a href="https://www.nuget.org/packages/xunit.runner.devices"><img src="https://img.shields.io/nuget/v/xunit.runner.devices.svg?style=flat-square&logo=nuget"></a></td>
-      <td></td>
+      <td><a href="https://dev.azure.com/dotnet/xUnit/_packaging?_a=package&feed=fe8eb338-07fd-45a0-b2ac-c80b58ca8c34&package=a4366a02-ff04-4fa0-97b2-564e2f56ea7c&preferRelease=true"><img src="https://azpkgsshield.azurevoodoo.net/dotnet/xUnit/xUnit/xunit.runner.devices"></a></td>
       <td><a href="https://dev.azure.com/dotnet/xUnit/_build?definitionId=23&_a=summary"><img src="https://img.shields.io/azure-devops/build/dotnet/xUnit/23?style=flat-square&logo=azure-devops"></a></td>
     </tr>
     <tr>
       <th>xunit.runner.visualstudio</th>
       <td><a href="https://www.nuget.org/packages/xunit.runner.visualstudio"><img src="https://img.shields.io/nuget/v/xunit.runner.visualstudio.svg?style=flat-square&logo=nuget"></a></td>
-      <td></td>
+      <td><a https://dev.azure.com/dotnet/xUnit/_packaging?_a=package&feed=fe8eb338-07fd-45a0-b2ac-c80b58ca8c34&package=d5787e76-3ff2-4ac9-bd7f-a0c8ac3ec743&preferRelease=true"><img src="https://azpkgsshield.azurevoodoo.net/dotnet/xUnit/xUnit/xunit.runner.visualstudio"></a></td>
       <td><a href="https://dev.azure.com/dotnet/xUnit/_build?definitionId=64&_a=summary"><img src="https://img.shields.io/azure-devops/build/dotnet/xUnit/64?style=flat-square&logo=azure-devops"></a></td>
     </tr>
   </tbody>
