Update Claire's Twitter handle (#69)
* Update Claire's Twitter handle

* Misspell

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: Home
 </p>
 
 <blockquote>
-  <em>Follow on Twitter: <a href="https://twitter.com/xunit">@xunit</a>, <a href="https://twitter.com/jamesnewkirk">@jamesnewkirk</a>, <a href="https://twitter.com/bradwilson">@bradwilson</a>, <a href="https://twitter.com/onovotny">@onovotny</a></em><br />
+  <em>Follow on Twitter: <a href="https://twitter.com/xunit">@xunit</a>, <a href="https://twitter.com/jamesnewkirk">@jamesnewkirk</a>, <a href="https://twitter.com/bradwilson">@bradwilson</a>, <a href="https://twitter.com/clairernovotny">@clairernovotny</a></em><br />
   <em>Discussions are held on <a href="https://xunit.slack.com/">Slack</a>. Not a member yet? <a href="https://xunit-slackin.herokuapp.com/">Sign up now!</a></em><br />
   <em>Resharper support is provided and supported by <a href="https://www.jetbrains.com/">JetBrains</a>.</em><br />
   <em>CodeRush support is provided and supported by <a href="https://www.devexpress.com/">DevExpress</a>.</em><br />
